Load component hints from knowledge base

--- a/GH_MCP/GH_MCP/Resources/ComponentKnowledgeBase.json
+++ b/GH_MCP/GH_MCP/Resources/ComponentKnowledgeBase.json
@@ -1233,6 +1233,29 @@
         ]
       }
     ],
+    "componentHints": {
+      "Number Slider": {
+        "description": "Single numeric value slider with adjustable range",
+        "common_usage": "Use for single numeric inputs like radius, height, count, etc.",
+        "parameters": ["min", "max", "value", "rounding", "type"],
+        "NOT_TO_BE_CONFUSED_WITH": "MD Slider (which is for multi-dimensional values)"
+      },
+      "MD Slider": {
+        "description": "Multi-dimensional slider for vector input",
+        "common_usage": "Use for vector inputs, NOT for simple numeric values",
+        "NOT_TO_BE_CONFUSED_WITH": "Number Slider (which is for single numeric values)"
+      },
+      "Panel": {
+        "description": "Displays text or numeric data",
+        "common_usage": "Use for displaying outputs and debugging"
+      },
+      "Addition": {
+        "description": "Adds two or more numbers",
+        "common_usage": "Connect two Number Sliders to inputs A and B",
+        "parameters": ["A", "B"],
+        "connection_tip": "First slider should connect to input A, second to input B"
+      }
+    },
     "dataTypes": [
       {
         "name": "Number",
